# robocup_at_home_gazebo

./: CMakeLists.txt  README.md  package.xml
launch/: serve_breakfast.py  storing_groceries.py
models/001_chips_can/: chips_can.sdf
models/002_master_chef_can/: master_chef_can.sdf
models/003_cracker_box/: cracker_box.sdf
models/004_sugar_box/: sugar_box.sdf
models/005_tomato_soup_can/: tomato_soup_can.sdf
models/007_tuna_fish_can/: tuna_fish_can.sdf
models/009_gelatin_box/: gelatin_box.sdf
models/010_potted_meat_can/: potted_meat_can.sdf
models/012_strawberry/: strawberry.sdf
models/014_lemon/: lemon.sdf
models/015_peach/: peach.sdf
models/016_pear/: pear.sdf
models/018_plum/: plum.sdf
models/019_pitcher_base/: pitcher_base.sdf
models/024_bowl/: bowl.sdf
models/031_spoon/: spoon.sdf
models/055_baseball/: baseball.sdf
models/056_tennis_ball/: tennis_ball.sdf
models/reemc_bookshelf/: bookshelf.sdf
worlds/: serve_breakfast.world  storing_groceries.world
